# investlink

./: .env.example  .env.pythonanywhere.example  .gitignore  BLOG_ADMIN_GUIDE.md  CLOUDINARY_SETUP.md  COMMANDES_UTILES.md  Cahier des charges — Plateforme de mise en relation.md  MIGRATIONS_NEEDED.md  PHASE_1_COMPLETE.md  PLAN_ACTION.md  POSTGRESQL_CONFIG.md  POSTGRESQL_MIGRATION.md  PYTHONANYWHERE_CHECKLIST.md  PYTHONANYWHERE_DEPLOYMENT.md  PYTHONANYWHERE_QUICKREF.md  README.md  README_START.md  RENDER_CLOUDINARY_CONFIG.md  RENDER_DEPLOYMENT.md  SERVER_SCRIPTS.md  URGENCE_PERTE_DONNEES.md  backup_data.py  backup_restore_guide.md  build.sh  check_cloudinary.py  deploy_pythonanywhere.sh  main.py  package-lock.json  package.json  pyproject.toml  pythonanywhere_wsgi.py  requirements.txt  restore_data.py  start.sh  stop.sh  tailwind.config.js
backups/: README.md
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_copy_data_from_core.py
config/: settings.py  urls.py
core/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_activitylog.py  0003_contactmessage.py
messaging/: admin.py  models.py  urls.py  views.py
messaging/migrations/: 0001_initial.py  0002_initial.py
notifications/: admin.py  models.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_initial.py  (+1 more)
projects/: admin.py  forms.py  models.py  urls.py  views.py
templates/: base.html  test_responsive.html
users/: admin.py  forms.py  models.py  urls.py  views.py
(+84 files in other folders)
