[project]
name = "investlink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.2.7",
    "django-crispy-forms>=2.4",
    "django-environ>=0.12.0",
    "pillow>=12.0.0",
    "python-decouple>=3.8",
]
